--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
     "eslint"
   ],
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
     "eslint": "^4.1.1",
     "eslint-config-eslint": "^3.0.0",
     "eslint-plugin-node": "^4.0.1",
-    "mocha": "^3.1.0",
-    "babel-eslint": "^8.2.6"
+    "mocha": "^3.1.0"
   },
   "peerDependencies": {
     "eslint": ">=4.1.1"
   },
   "dependencies": {
+    "lodash": "^4.17.10"
   }
 }
