--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-nebulas-contract",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "ESLint shareable config for the Nebulas smart contract style",
   "license": "MIT",
   "repository": "https://github.com/xingyunwork/eslint-plugin-nebulas-contract",
@@ -12,8 +12,10 @@
     "lint": "eslint .",
     "test": "mocha tests/**/*.js"
   },
+  "main": "lib/index.js",
   "files": [
-    "index.js"
+    "index.js",
+    "rules"
   ],
   "keywords": [
     "nebulas",
