--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-nebulas-contract",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Additional ESLint's rules for Nebulas Smart Contracts",
   "license": "MIT",
   "repository": "https://github.com/xingyunwork/eslint-plugin-nebulas-contract",
@@ -31,6 +31,7 @@
     "eslint": ">=5.4.0"
   },
   "dependencies": {
-    "eslint": "^5.4.0"
+    "eslint": "^5.4.0",
+    "req-all": "^1.0.0"
   }
 }
