--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "mocha tests/**/*.js"
+    "test": "mocha tests/**/*.js",
+    "test1": "mocha tests/module-exports.js"
   },
   "main": "index.js",
   "files": [
