--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Additional ESLint's rules for Nebulas Smart Contracts",
   "license": "MIT",
   "repository": "https://github.com/xingyunwork/eslint-plugin-nebulas-contract",
+  "bugs": {
+    "url": "https://github.com/xingyunwork/eslint-plugin-nebulas-contract/issues"
+  },
   "author": "yucopowo <yucopowo@gmail.com>",
   "engines": {
     "node": "^6.14.0 || ^8.10.0 || >=9.10.0"
