--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-nebulas-contract",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "Additional ESLint's rules for Nebulas Smart Contracts",
   "license": "MIT",
   "repository": "https://github.com/xingyunwork/eslint-plugin-nebulas-contract",
@@ -19,7 +19,8 @@
   "main": "index.js",
   "files": [
     "index.js",
-    "rules"
+    "rules",
+    "utils"
   ],
   "keywords": [
     "nebulas",
