--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-nebulas-contract",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "Additional ESLint's rules for Nebulas Smart Contracts",
   "license": "MIT",
   "repository": "https://github.com/xingyunwork/eslint-plugin-nebulas-contract",
@@ -38,6 +38,7 @@
   "dependencies": {
     "bignumber.js": "^7.2.1",
     "eslint": "^5.4.0",
+    "extend": "^3.0.2",
     "req-all": "^1.0.0"
   }
 }
