--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "mocha tests/**/*.js",
-    "test1": "mocha tests/no-dupe-keys-in-local-contract-storage.js"
+    "test1": "mocha tests/valid-contract.js"
   },
   "main": "index.js",
   "files": [
