--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-nebulas-contract",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "Additional ESLint's rules for Nebulas Smart Contracts",
   "license": "MIT",
   "repository": "https://github.com/xingyunwork/eslint-plugin-nebulas-contract",
@@ -14,7 +14,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "mocha tests/**/*.js",
-    "test1": "mocha tests/valid-contract.js"
+    "test1": "mocha tests/no-dupe-keys-in-local-contract-storage1.js"
   },
   "main": "index.js",
   "files": [
